//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto2";

package core.instance;

import "com/sandpolis/core/foundation/platform.proto";

option java_package = "com.sandpolis.core.instance";
option optimize_for = CODE_SIZE;

message ProtoAttribute {
    optional int64 timestamp = 1;

    oneof value {
        // Standard types
        string  string   = 2;
        int32   integer  = 3;
        int64   long     = 4;
        bool    boolean  = 5;
        double  double   = 6;
        bytes   bytes    = 7;

        // Additional types
        core.foundation.OsType os_type = 8;
    }
}

message ProtoDocument {
    map<int32, ProtoAttribute> attribute = 1;
    map<int32, ProtoDocument> document = 2;
    map<int32, ProtoCollection> collection = 3;
}

message ProtoCollection {
    map<int32, ProtoDocument> document = 2;
}
